T-6399 theme/standard-totara: Fixed an ie6 issue in the Learner dashboard whereby some content was covered up

--- a/theme/standard-totara/styles_ie6.css
+++ b/theme/standard-totara/styles_ie6.css
@@ -89,3 +89,7 @@ div.totara-dialog ul.treeview li {
 div.totara-dialog ul.treeview li span.folder {
     float: left;
 }
+
+.dashboard .dashlet_container {
+    position:relative;
+}
